--- a/src/main/resources/templates/Employee/attendance.html
+++ b/src/main/resources/templates/Employee/attendance.html
@@ -13,7 +13,7 @@
     <link
             href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Playwrite+GB+J:ital,wght@0,100..400;1,100..400&display=swap"
             rel="stylesheet">
-    <title>index</title>
+    <title>Attendance</title>
 </head>
 
 <body>
@@ -35,9 +35,6 @@
 
         <div class="icons">
             <i class="fa-solid fa-layer-group fa-lg "></i> <a href="/profile">Profile Management</a>
-        </div>
-        <div class="icons">
-            <i class="fa-solid fa-money-bill fa-lg"></i><a href="/epayroll">Payroll</a>
         </div>
         <div class="icons">
             <i class="fa-solid fa-calendar fa-lg"></i><a href="/meetings">Meetings</a>
