--- a/src/main/resources/templates/HR/leaves.html
+++ b/src/main/resources/templates/HR/leaves.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -43,10 +44,6 @@
         <i class="fa-solid fa-layer-group fa-lg "></i> <a href="/payroll">Payroll</a>
     </div>
     <div class="icons">
-        <i class="fa-regular fa-folder-open fa-lg "></i><a href="/document">Documents</a>
-        <!-- Fixed the closing tag -->
-    </div>
-    <div class="icons">
 
         <svg width="22px" height="22px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
              class="hover:text-[#4682B4] hover:cursor-pointer mr-2 pr-1">
@@ -82,14 +79,7 @@
                 <h3>Welcome back,<span>HR</span></h3>
 
             </div>
-            <div class="links-buttons">
-                <i class="fa-solid fa-magnifying-glass fa-lg relative right-5"
-                   style="color: gray;padding-right: 8px;"></i>
-                <i class="fa-regular fa-bell  fa-lg" style="color: gray;"></i>
-                <button class="button1"><i class="fa-regular fa-calendar"
-                                           style="color: gray;padding-right:8px;"></i>Attendance</button>    <button class="button2"><i class="fa-solid fa-plus" style="color:white;padding-right:8px;"></i><a href="/contract">Add
-                Employee</a></button>
-            </div>
+
         </div>
         <!---Put Your Code for the body HERE-->
         <div class="main-content">
