--- a/src/main/resources/templates/HR/security.html
+++ b/src/main/resources/templates/HR/security.html
@@ -344,8 +344,6 @@
 
             </div>
             <script>
-
-
                 function showForm(){
                     document.getElementById("addForm").style.display="block";
 
@@ -383,13 +381,11 @@
 
                 }
                 function handleFormSubmit(event) {
-                    event.preventDefault(); // Prevents the page refresh on form submission
+                    event.preventDefault();
 
-                    // Perform form submission logic here (e.g., AJAX, validation)
-                    // After submission, you can redirect to the same page or perform any actions.
-                    window.location.href = window.location.href; // Redirects to the same page
+                    window.location.href = window.location.href;
                 }
-                // Sign Up Form Submission
+
 
             </script>
 
