--- a/src/main/resources/templates/Employee/announcements.html
+++ b/src/main/resources/templates/Employee/announcements.html
@@ -15,7 +15,7 @@
             rel="stylesheet">
 
 
-    <title>Employee</title>
+    <title>Announcements</title>
 </head>
 
 <body>
@@ -38,9 +38,6 @@
 
         <div class="icons">
             <i class="fa-solid fa-layer-group fa-lg "></i> <a href="/profile">Profile Management</a>
-        </div>
-        <div class="icons">
-            <i class="fa-solid fa-money-bill fa-lg"></i><a href="/epayroll">Payroll</a>
         </div>
         <div class="icons">
             <i class="fa-solid fa-calendar fa-lg"></i><a href="/meetings">Meetings</a>
