--- a/src/main/resources/templates/HR/EmployeeForm.html
+++ b/src/main/resources/templates/HR/EmployeeForm.html
@@ -15,7 +15,7 @@
         rel="stylesheet">
 
    
-    <title>Converted Tailwind CSS Layout</title>
+    <title>Login Form</title>
 </head>
 <style>
     body {
