--- a/src/main/resources/templates/HR/contract.html
+++ b/src/main/resources/templates/HR/contract.html
@@ -15,7 +15,7 @@
             rel="stylesheet">
 
 
-    <title>Converted Tailwind CSS Layout</title>
+    <title>add employee</title>
 </head>
 
 <style>
@@ -298,7 +298,6 @@
 </style>
 <body>
 <div class="container">
-    <!-- Sidebar -->
     <div class="sidebar">
         <div class="heading">
             <h2>HR DIVE</h2>
@@ -328,7 +327,7 @@
             <i class="fa-regular fa-folder-open fa-lg "></i><a href="/document">Documents</a> <!-- Fixed the closing tag -->
         </div>
         <div class="icons">
-
+    
             <svg width="22px" height="22px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
                  class="hover:text-[#4682B4] hover:cursor-pointer mr-2 pr-1">
                 <path
@@ -344,12 +343,13 @@
                         d="M8.4 14H4.6C4.03995 14 3.75992 14 3.54601 14.109C3.35785 14.2049 3.20487 14.3578 3.10899 14.546C3 14.7599 3 15.0399 3 15.6V19.4C3 19.9601 3 20.2401 3.10899 20.454C3.20487 20.6422 3.35785 20.7951 3.54601 20.891C3.75992 21 4.03995 21 4.6 21H8.4C8.96005 21 9.24008 21 9.45399 20.891C9.64215 20.7951 9.79513 20.6422 9.89101 20.454C10 20.2401 10 19.9601 10 19.4V15.6C10 15.0399 10 14.7599 9.89101 14.546C9.79513 14.3578 9.64215 14.2049 9.45399 14.109C9.24008 14 8.96005 14 8.4 14Z"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
-            <p class="hover:text-[#4682B4]    hover:cursor-pointer text-wrap">Apps & Integration</p>
-
+            <p class="hover:text-[#4682B4]    hover:cursor-pointer text-wrap">Meeting</p>
+    
         </div>
         <div class="icons">
             <i class="fa-solid fa-gear fa-lg"></i> <a href="/security">Settings</a>
         </div>
+    
     </div>
 
 
