--- a/src/main/resources/templates/HR/contract.html
+++ b/src/main/resources/templates/HR/contract.html
@@ -358,6 +358,7 @@
     <div class="navigation">
         <body style="width:100%;"><!--code for body here-->
             <div class="links">
+                <button class="menu-toggle">☰</button>
                 <div class="prof">
 
                     <h3>Welcome back,HR</h3>
