--- a/src/main/resources/templates/HR/Attendances.html
+++ b/src/main/resources/templates/HR/Attendances.html
@@ -20,8 +20,6 @@
 <div class="sidebar">
     <div class="heading">
         <h2>HR DIVE</h2>
-        <button id="chevron" onclick="toggleMenu()" style="background: transparent; border: none;"><i
-                class="fa-solid fa-chevron-left"></i></button>
     </div>
     <h3>Menu</h3>
     <div class="icons">
@@ -78,6 +76,7 @@
 <div class="navigation">
     <div class="navbar">
         <div class="links">
+            <button class="menu-toggle">☰</button>
             <div class="prof">
                 <h3>Welcome back,<span>HR</span></h3>
 
