--- a/src/main/resources/templates/Employee/dash.html
+++ b/src/main/resources/templates/Employee/dash.html
@@ -73,7 +73,7 @@
                     d="M8.4 14H4.6C4.03995 14 3.75992 14 3.54601 14.109C3.35785 14.2049 3.20487 14.3578 3.10899 14.546C3 14.7599 3 15.0399 3 15.6V19.4C3 19.9601 3 20.2401 3.10899 20.454C3.20487 20.6422 3.35785 20.7951 3.54601 20.891C3.75992 21 4.03995 21 4.6 21H8.4C8.96005 21 9.24008 21 9.45399 20.891C9.64215 20.7951 9.79513 20.6422 9.89101 20.454C10 20.2401 10 19.9601 10 19.4V15.6C10 15.0399 10 14.7599 9.89101 14.546C9.79513 14.3578 9.64215 14.2049 9.45399 14.109C9.24008 14 8.96005 14 8.4 14Z"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
-            <a class="hover:text-[#4682B4]    hover:cursor-pointer text-wrap" href="/etasks">Tasks</a>
+            <a class="hover:text-[#4682B4]    hover:cursor-pointer text-wrap" href="/etask">Task</a>
 
         </div>
 
@@ -112,8 +112,8 @@
                             <p>You are marked <span class="status">present</span> today.</p>
                         </div>
                         <div class="card">
-                            <h2>Tasks</h2>
-                            <p>3 pending tasks. <a href="/etask">View tasks</a></p>
+                            <h2>Task</h2>
+                            <p>3 pending Task. <a href="/etask">View Task</a></p>
                         </div>
                         <div class="card">
                             <h2>Payroll</h2>
@@ -276,19 +276,19 @@
         });
     </script>
 
-<script>
-    const toggleButton = document.querySelector(".menu-toggle");
-    const sidebar = document.querySelector(".sidebar");
+    <script>
+        const toggleButton = document.querySelector(".menu-toggle");
+        const sidebar = document.querySelector(".sidebar");
 
-    toggleButton.addEventListener("click", function () {
-        if (window.innerWidth <= 768) {
-            sidebar.classList.toggle("active"); // Mobile toggle
-        } else {
-            sidebar.classList.toggle("collapsed"); // Desktop collapse
-        }
-    });
+        toggleButton.addEventListener("click", function () {
+            if (window.innerWidth <= 768) {
+                sidebar.classList.toggle("active"); // Mobile toggle
+            } else {
+                sidebar.classList.toggle("collapsed"); // Desktop collapse
+            }
+        });
 
-</script>
+    </script>
 </body>
 
 </html>
