--- a/src/main/resources/templates/Employee/dash.html
+++ b/src/main/resources/templates/Employee/dash.html
@@ -21,7 +21,7 @@
 <body>
 <div class="container">
     <!-- Sidebar -->
-    <div class="sidebar">
+    <div class="sidebar" style="width:240px;font-size:16px">
         <div class="heading">
             <h2>HR DIVE</h2>
             <button id="chevron" onclick="toggleMenu()" style="background: transparent; border: none;"><i
@@ -32,55 +32,41 @@
             <i class="fa-solid fa-house fa-lg "></i> <a href="/dash">Dashboard</a>
         </div>
 
+
+
+
         <div class="icons">
-            <i class="fa-regular fa-square-check fa-lg "></i> <a href="/attendance">Attendances</a>
+            <i class="fas fa-calendar-check fa-lg"></i>  <a href="/attendance">Attendances</a>
+        </div>
+        <div class="icons">
+            <i class="fas fa-plane-departure fa-lg"></i> <a href="/leave">Leave Request</a>
+        </div>
+        <div class="icons">
+            <i class="fas fa-tasks fa-lg"></i> <a href="/etask">Tasks</a>
         </div>
 
         <div class="icons">
-            <i class="fa-solid fa-layer-group fa-lg "></i> <a href="/profile">Profile Management</a>
+            <i class="fas fa-bullhorn fa-lg"></i> <a href="/announcements">Announcements</a>
         </div>
 
         <div class="icons">
-            <i class="fa-solid fa-calendar fa-lg"></i><a href="/meetings">Meetings</a>
+            <i class="fas fa-headset fa-lg"></i> <a href="/help&support">Help & Support</a>
         </div>
 
         <div class="icons">
-            <i class="fa-solid fa-comments fa-lg"></i><a href="/feedbacks">Feedbacks and Complaints</a>
+            <i class="fa-solid fa-ticket"></i><a href="/mySupportRequests">Request History</a>
         </div>
-        <div class="icons">
-            <i class="fa-solid fa-bullhorn fa-lg"></i><a href="/announcements">Announcements</a>
-        </div>
-        <div class="icons">
-            <i class="fa-solid fa-calendar-check fa-lg"></i><a href="/leave">Leave Request</a>
-        </div>
-        <div class="icons">
-
-            <svg width="22px" height="22px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
-                 class="hover:text-[#4682B4] hover:cursor-pointer mr-2 pr-1">
-                <path
-                        d="M8.4 3H4.6C4.03995 3 3.75992 3 3.54601 3.10899C3.35785 3.20487 3.20487 3.35785 3.10899 3.54601C3 3.75992 3 4.03995 3 4.6V8.4C3 8.96005 3 9.24008 3.10899 9.45399C3.20487 9.64215 3.35785 9.79513 3.54601 9.89101C3.75992 10 4.03995 10 4.6 10H8.4C8.96005 10 9.24008 10 9.45399 9.89101C9.64215 9.79513 9.79513 9.64215 9.89101 9.45399C10 9.24008 10 8.96005 10 8.4V4.6C10 4.03995 10 3.75992 9.89101 3.54601C9.79513 3.35785 9.64215 3.20487 9.45399 3.10899C9.24008 3 8.96005 3 8.4 3Z"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                <path
-                        d="M19.4 3H15.6C15.0399 3 14.7599 3 14.546 3.10899C14.3578 3.20487 14.2049 3.35785 14.109 3.54601C14 3.75992 14 4.03995 14 4.6V8.4C14 8.96005 14 9.24008 14.109 9.45399C14.2049 9.64215 14.3578 9.79513 14.546 9.89101C14.7599 10 15.0399 10 15.6 10H19.4C19.9601 10 20.2401 10 20.454 9.89101C20.6422 9.79513 20.7951 9.64215 20.891 9.45399C21 9.24008 21 8.96005 21 8.4V4.6C21 4.03995 21 3.75992 20.891 3.54601C20.7951 3.35785 20.6422 3.20487 20.454 3.10899C20.2401 3 19.9601 3 19.4 3Z"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                <path
-                        d="M19.4 14H15.6C15.0399 14 14.7599 14 14.546 14.109C14.3578 14.2049 14.2049 14.3578 14.109 14.546C14 14.7599 14 15.0399 14 15.6V19.4C14 19.9601 14 20.2401 14.109 20.454C14.2049 20.6422 14.3578 20.7951 14.546 20.891C14.7599 21 15.0399 21 15.6 21H19.4C19.9601 21 20.2401 21 20.454 20.891C20.6422 20.7951 20.7951 20.6422 20.891 20.454C21 20.2401 21 19.9601 21 19.4V15.6C21 15.0399 21 14.7599 20.891 14.546C20.7951 14.3578 20.6422 14.2049 20.454 14.109C20.2401 14 19.9601 14 19.4 14Z"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                <path
-                        d="M8.4 14H4.6C4.03995 14 3.75992 14 3.54601 14.109C3.35785 14.2049 3.20487 14.3578 3.10899 14.546C3 14.7599 3 15.0399 3 15.6V19.4C3 19.9601 3 20.2401 3.10899 20.454C3.20487 20.6422 3.35785 20.7951 3.54601 20.891C3.75992 21 4.03995 21 4.6 21H8.4C8.96005 21 9.24008 21 9.45399 20.891C9.64215 20.7951 9.79513 20.6422 9.89101 20.454C10 20.2401 10 19.9601 10 19.4V15.6C10 15.0399 10 14.7599 9.89101 14.546C9.79513 14.3578 9.64215 14.2049 9.45399 14.109C9.24008 14 8.96005 14 8.4 14Z"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
-            <a class="hover:text-[#4682B4]    hover:cursor-pointer text-wrap" href="/etasks">Tasks</a>
-
-        </div>
-
         <div class="icons">
             <i class="fa-solid fa-gear fa-lg"></i> <a href="/security">Settings</a>
-
         </div>
-
+        <div class="icons">
+            <form action="/logout" method="POST" style="padding: 0;margin: 0;background: steelblue;box-shadow: none;position: relative;right:10px">
+                <button type="submit" class="logout-btn" style="background: transparent;">
+                    <i class="fa-solid fa-sign-out-alt"></i> Logout
+                </button>
+            </form>
+        </div>
     </div>
-
 
     <!-- Navbar -->
     <div class="navigation">
@@ -91,9 +77,9 @@
 
                 </div>
                 <div class="links-buttons" style="position:relative;right: 60px;">
-                    <form action="/logout" method="POST" style="display: inline;background: transparent;border: none;box-shadow: none;position: relative;top: 14px;">
-                        <button type="submit" class="logout-btn">
-                            <i class="fa-solid fa-sign-out-alt"></i> Logout
+                    <form action="/checkout" method="POST" style="display: inline;background: transparent;border: none;box-shadow: none;position: relative;top: 14px;">
+                        <button type="submit" class="checkout-btn">
+                            <i class="fa-solid fa-clock"></i>Check Out
                         </button>
                     </form>
             </div>
@@ -110,17 +96,18 @@
                             <p>You are marked <span class="status">present</span> today.</p>
                         </div>
                         <div class="card">
-                            <h2>Tasks</h2>
-                            <p>3 pending tasks. <a href="/etask">View tasks</a></p>
+                            <h2>Pending Tasks</h2>
+                            <p id="pending">0 pending tasks. <a href="/etask">View tasks</a></p>
                         </div>
                         <div class="card">
-                            <h2>Payroll</h2>
-                            <p>Status: <span class="status">Processed</span></p>
+                            <h2> Approved Tasks</h2>
+                            <p id="approved">0 pending tasks. <a href="/etask">View tasks</a></p>
                         </div>
                         <div class="card">
-                            <h2>Meetings</h2>
-                            <p>Upcoming: Project Sync at 3 PM.</p>
+                            <h2>Leave Request</h2>
+                            <p><span class="requests">You have 0 approved leave requests</span></p>
                         </div>
+
                     </div>
                     <div class="announcements">
                         <h2>Announcements</h2>
@@ -267,11 +254,79 @@
 </style>
 <script>
     document.addEventListener('DOMContentLoaded', function() {
-      const name = localStorage.getItem('employeeFirstName');
-      if (name) {
-          document.getElementById('employee-name').textContent = name;
-      }
-  });
+       const name = localStorage.getItem('employeeFirstName');
+       if (name) {
+           document.getElementById('employee-name').textContent = name;
+       }
+
+   fetch("latest")
+    .then(response => response.json())
+    .then(data => {
+        const count = data["Latest:"];
+        if(count && count > 0) {
+            console.log(`You have ${count} new announcement(s) today`);
+
+          document.querySelector('.announcements p').innerHTML =
+    `You have <span style="color:steelblue">${count}</span> new announcement(s) today.`;
+        } else {
+            console.log("No new announcements today");
+        }
+    })
+    .catch(error => {
+        console.error("Error fetching announcements:", error);
+    });
+
+       fetch(`PendingTasks?status=Pending`)
+    .then(response => response.json())
+    .then(data => {
+        const count = data["Task:"];
+        if(count && count > 0) {
+            console.log(`You have ${count} pending tasks`);
+
+          document.getElementById("pending").innerHTML =
+    `You have <span style="color:steelblue">${count}</span> pending tasks.`;
+        } else {
+            console.log("No new announcements today");
+        }
+    })
+    .catch(error => {
+        console.error("Error fetching announcements:", error);
+    });
+       fetch(`PendingTasks?status=Approved`)
+    .then(response => response.json())
+    .then(data => {
+        const count = data["Task:"];
+        if(count && count > 0) {
+            console.log(`You have ${count} approved tasks`);
+
+           document.getElementById("approved").innerHTML =
+    `You have <span style="color:steelblue">${count}</span>  approved tasks.`;
+        } else {
+            console.log("No new announcements today");
+        }
+    })
+    .catch(error => {
+        console.error("Error fetching announcements:", error);
+    });
+
+
+      fetch(`ApprovedRequests?status=Approved`)
+    .then(response => response.json())
+    .then(data => {
+        const count = data["Approved:"];
+        if(count && count > 0) {
+            console.log(`You have ${count} approved leave requests`);
+
+           document.getElementById("requests").innerHTML =
+    `You have <span style="color:steelblue">${count}</span>  approved leave requests.`;
+        } else {
+            console.log("No approved requests");
+        }
+    })
+    .catch(error => {
+        console.error("Error fetching announcements:", error);
+    });
+   });
 </script>
 </body>
 
