--- a/src/main/resources/templates/Employee/meeting.html
+++ b/src/main/resources/templates/Employee/meeting.html
@@ -22,8 +22,7 @@
     <div class="sidebar">
         <div class="heading">
             <h2>HR DIVE</h2>
-            <button id="chevron" onclick="toggleMenu()" style="background: transparent; border: none;"><i
-                    class="fa-solid fa-chevron-left"></i></button>
+
         </div>
         <h3>Menu</h3>
         <div class="icons">
@@ -42,9 +41,7 @@
             <i class="fa-solid fa-calendar fa-lg"></i><a href="/meeting">Meetings</a>
         </div>
 
-        <div class="icons">
-            <i class="fa-solid fa-comments fa-lg"></i><a href="/feedbacks">Feedbacks and Complaints</a>
-        </div>
+
         <div class="icons">
             <i class="fa-solid fa-bullhorn fa-lg"></i><a href="/announcements">Announcements</a>
         </div>
@@ -70,6 +67,9 @@
             </svg>
             <a class="hover:text-[#4682B4]    hover:cursor-pointer text-wrap" href="/etask">Tasks</a>
 
+        </div>
+        <div class="icons">
+            <i class="fa-solid fa-comments fa-lg"></i><a href="/help&support">Help & Support</a>
         </div>
         <div class="icons">
             <i class="fa-solid fa-gear fa-lg"></i> <a href="/security">Settings</a>
