--- a/src/main/resources/templates/HR/contract.html
+++ b/src/main/resources/templates/HR/contract.html
@@ -299,7 +299,7 @@
 <body>
 <div class="container">
     <!-- Sidebar -->
-    <div class="sidebar">
+    <div class="sidebar" style="width:240px !important;font-size:16px;">
         <div class="heading">
             <h2>HR DIVE</h2>
             <button id="chevron" onclick="toggleMenu()" style="background: transparent; border: none;"><i
@@ -310,11 +310,15 @@
             <i class="fa-solid fa-house fa-lg "></i> <a href="/dashboard">Dashboard</a>
         </div>
         <div class="icons">
-            <i class="fa-regular fa-user fa-lg"></i><a href="/employees">Employees</a>
+            <i class="fa-solid fa-people-group fa-lg"></i><a href="/employees">Employees</a>
         </div>
         <div class="icons">
-            <i class="fa-solid fa-plus fa-lg"></i> <a href="/contract">Contract</a>
+            <i class="fa-solid fa-plus fa-lg"></i> <a href="/contract">New Hire</a>
         </div>
+        <div class="icons">
+            <i class="fa-solid fa-clipboard-list"></i> <a href="/assignedTasks">Tasks</a>
+        </div>
+
         <div class="icons">
             <i class="fa-regular fa-square-check fa-lg "></i> <a href="/Attendances">Attendances</a>
         </div>
@@ -324,36 +328,37 @@
         <div class="icons">
             <i class="fa-solid fa-layer-group fa-lg "></i> <a href="/payroll">Payroll</a>
         </div>
-
         <div class="icons">
-
-            <svg width="22px" height="22px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
-                 class="hover:text-[#4682B4] hover:cursor-pointer mr-2 pr-1">
-                <path
-                        d="M8.4 3H4.6C4.03995 3 3.75992 3 3.54601 3.10899C3.35785 3.20487 3.20487 3.35785 3.10899 3.54601C3 3.75992 3 4.03995 3 4.6V8.4C3 8.96005 3 9.24008 3.10899 9.45399C3.20487 9.64215 3.35785 9.79513 3.54601 9.89101C3.75992 10 4.03995 10 4.6 10H8.4C8.96005 10 9.24008 10 9.45399 9.89101C9.64215 9.79513 9.79513 9.64215 9.89101 9.45399C10 9.24008 10 8.96005 10 8.4V4.6C10 4.03995 10 3.75992 9.89101 3.54601C9.79513 3.35785 9.64215 3.20487 9.45399 3.10899C9.24008 3 8.96005 3 8.4 3Z"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                <path
-                        d="M19.4 3H15.6C15.0399 3 14.7599 3 14.546 3.10899C14.3578 3.20487 14.2049 3.35785 14.109 3.54601C14 3.75992 14 4.03995 14 4.6V8.4C14 8.96005 14 9.24008 14.109 9.45399C14.2049 9.64215 14.3578 9.79513 14.546 9.89101C14.7599 10 15.0399 10 15.6 10H19.4C19.9601 10 20.2401 10 20.454 9.89101C20.6422 9.79513 20.7951 9.64215 20.891 9.45399C21 9.24008 21 8.96005 21 8.4V4.6C21 4.03995 21 3.75992 20.891 3.54601C20.7951 3.35785 20.6422 3.20487 20.454 3.10899C20.2401 3 19.9601 3 19.4 3Z"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                <path
-                        d="M19.4 14H15.6C15.0399 14 14.7599 14 14.546 14.109C14.3578 14.2049 14.2049 14.3578 14.109 14.546C14 14.7599 14 15.0399 14 15.6V19.4C14 19.9601 14 20.2401 14.109 20.454C14.2049 20.6422 14.3578 20.7951 14.546 20.891C14.7599 21 15.0399 21 15.6 21H19.4C19.9601 21 20.2401 21 20.454 20.891C20.6422 20.7951 20.7951 20.6422 20.891 20.454C21 20.2401 21 19.9601 21 19.4V15.6C21 15.0399 21 14.7599 20.891 14.546C20.7951 14.3578 20.6422 14.2049 20.454 14.109C20.2401 14 19.9601 14 19.4 14Z"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                <path
-                        d="M8.4 14H4.6C4.03995 14 3.75992 14 3.54601 14.109C3.35785 14.2049 3.20487 14.3578 3.10899 14.546C3 14.7599 3 15.0399 3 15.6V19.4C3 19.9601 3 20.2401 3.10899 20.454C3.20487 20.6422 3.35785 20.7951 3.54601 20.891C3.75992 21 4.03995 21 4.6 21H8.4C8.96005 21 9.24008 21 9.45399 20.891C9.64215 20.7951 9.79513 20.6422 9.89101 20.454C10 20.2401 10 19.9601 10 19.4V15.6C10 15.0399 10 14.7599 9.89101 14.546C9.79513 14.3578 9.64215 14.2049 9.45399 14.109C9.24008 14 8.96005 14 8.4 14Z"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
-            <p class="hover:text-[#4682B4]    hover:cursor-pointer text-wrap">Apps & Integration</p>
-
+            <i class="fa-solid fa-bullhorn"></i> <a href="/HRannouncements">Announcements</a>
+        </div>
+        <div class="icons">
+            <i class="fa-solid fa-headset fa-lg"></i> <a href="/support">Support Requests</a>
         </div>
         <div class="icons">
             <i class="fa-solid fa-gear fa-lg"></i> <a href="/security">Settings</a>
         </div>
+
     </div>
 
 
 
     <!-- Navbar -->
     <div class="navigation">
+        <div class="links">
+            <div class="prof">
+
+                <h3>Welcome back,<span id="employee-name" style="color:steelblue">HR</span></h3>
+            </div>
+            <div class="links-buttons" style="position:relative;right: 60px;">
+                <form action="/logout" method="POST"
+                      style="display: inline;background: transparent;border: none;box-shadow: none;position: relative;top: 14px;">
+                    <button type="submit" class="logout-btn">
+                        <i class="fa-solid fa-sign-out-alt"></i> Logout
+                    </button>
+                </form>
+
+            </div>
+        </div>
         <body style="width:100%;"><!--code for body here-->
             <div class="links">
                 <div class="prof">
@@ -411,7 +416,6 @@
                     radio.checked = true; // Set the radio button to checked
                 }
 
-                // Apply the border style for the clicked button
                 event.target.style.border = '2px solid steelblue';
             }
             if (event.target.classList.contains('emp-types')) {
@@ -438,7 +442,7 @@
                     radio.checked = true; // Set the radio button to checked
                 }
 
-                // Apply the border style for the clicked button
+
                 event.target.style.border = '2px solid steelblue';
             }
 
